# Smart-Home-IoT-

./: README.md
MERN/: package-lock.json  package.json
MERN/client/: npm-shrinkwrap.json  package.json
MERN/client/public/: index.html
MERN/client/src/: App.css  App.js  index.css  index.js
MERN/client/src/components/: DeviceCard.js  DeviceForm.js  Header.css  Header.js  Weather.js
MERN/server/: config.js  package-lock.json  package.json  server.js
MERN/server/models/: Device.js
device-control/: CMakeLists.txt  main.cpp  serviceManager.cpp
device-control/src/clientHandler/: HttpGetClient.cpp  HttpGetClient.hpp  IclientHandler.hpp  clientHandler.cpp  clientHandler.hpp
device-control/src/deviceManager/: AirConditioner.cpp  AirConditioner.hpp  Led.cpp  Led.hpp  deviceManager.cpp  deviceManager.hpp  idevice.hpp  url.hpp
device-control/src/parser/: parser.cpp  parser.hpp
device-control/src/serviceManager/: serviceManager.cpp  serviceManager.hpp
driver/: Makefile  gpio-file-operation.c  gpio-file-operation.h  mygpio.c
meta-smart-home/meta-custom/recipes-applications/configstartup-sv/: config-startup-sv.bb
meta-smart-home/meta-custom/recipes-applications/device-control/: device-control.bb
meta-smart-home/meta-custom/recipes-core/images/: custom-minimal.bb
meta-smart-home/meta-custom/recipes-frontend/fronted/: fronted_0.1.0.bb
meta-smart-home/meta-custom/recipes-httpd/: nginx_%.bbappend
meta-smart-home/meta-custom/recipes-httpd/nginx/: default_server
meta-smart-home/meta-raspberrypi/docs/: conf.py
(+3 files in other folders)
